--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,18 +2,6 @@
   <%= f.label :name %>
   <%= f.text_field :name %>
 
-  <%= f.label :address %>
-  <%= f.text_field :address %>
-
-  <%= f.label :city %>
-  <%= f.text_field :city %>
-
-  <%= f.label :state %>
-  <%= f.text_field :state %>
-
-  <%= f.label :zip %>
-  <%= f.text_field :zip %>
-
   <%= f.label :email %>
   <%= f.email_field :email %>
 
@@ -22,6 +10,20 @@
 
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation %>
+
+    <%= fields_for :addresses do |address| %>
+      <%= address.label :street %>
+      <%= address.text_field :street %>
+
+      <%= address.label :city %>
+      <%= address.text_field :city %>
+
+      <%= address.label :state %>
+      <%= address.text_field :state %>
+
+      <%= address.label :zip %>
+      <%= address.text_field :zip %>
+    <% end %>
 
   <%= f.submit 'Register' %>
 <% end %>
