--- a/app/views/merchant/orders/show.html.erb
+++ b/app/views/merchant/orders/show.html.erb
@@ -1,5 +1,5 @@
 <h2><%= @order.user.name %></h2>
-<p><%= @order.user.address %></p>
+<p><%= @order.user.street %></p>
 <p><%= @order.user.city %> <%= @order.user.state %> <%= @order.user.zip %></p>
 <p>Status: <%= @order.status %></p>
 
