--- a/app/views/users/_address.html.erb
+++ b/app/views/users/_address.html.erb
@@ -1,2 +1,14 @@
 <h1><%= @user.name %></h1>
 <p><%= @user.email %></p>
+
+<h3>Addresses</h3>
+<% @user.addresses.each do |address| %>
+<section id="address-<%= address.id %>">
+  <p>Street Address: <%= address.street %></p>
+  <p>City: <%= address.city %></p>
+  <p>State: <%= address.state %></p>
+  <p>Zip Code: <%= address.zip %></p>
+  <h5>Nickname: <%= address.nickname %></h5>
+  <%= button_to "Edit Address", edit_address_path(address), method: :get %>
+  </section>
+<% end %>
