--- a/app/views/users/_address.html.erb
+++ b/app/views/users/_address.html.erb
@@ -1,6 +1,8 @@
 <h1><%= @user.name %></h1>
 <p><%= @user.email %></p>
 
+<%= button_to "Enter New Address", new_address_path, method: :get %>
+
 <h3>Addresses</h3>
 <% @user.addresses.each do |address| %>
 <section id="address-<%= address.id %>">
