Add new address that then appears on profile under addresses

--- a/app/views/addresses/edit.html.erb
+++ b/app/views/addresses/edit.html.erb
@@ -11,7 +11,7 @@
   <%= text_field_tag :state, params[:state] %>
 
   <%= label_tag :zip %>
-  <%= text_field_tag :zip, params[:zip] %>
+  <%= number_field_tag :zip, params[:zip] %>
 
   <%= label_tag :nickname %>
   <%= text_field_tag :nickname, params[:nickname] %>
