--- a/app/views/users/_address.html.erb
+++ b/app/views/users/_address.html.erb
@@ -11,6 +11,7 @@
   <p>State: <%= address.state %></p>
   <p>Zip Code: <%= address.zip %></p>
   <h5>Nickname: <%= address.nickname %></h5>
+  <%= button_to "View", address_path(address), method: :get %>
   <%= button_to "Edit Address", edit_address_path(address), method: :get %>
   <%= button_to "Delete Address", address_path(address), method: :delete %>
   </section>
