--- a/app/views/users/_address.html.erb
+++ b/app/views/users/_address.html.erb
@@ -13,6 +13,8 @@
   <h5>Nickname: <%= address.nickname %></h5>
   <%= button_to "View", address_path(address), method: :get %>
   <%= button_to "Edit Address", edit_address_path(address), method: :get %>
-  <%= button_to "Delete Address", address_path(address), method: :delete %>
+  <% if !address.shipped_to? %>
+    <%= button_to "Delete Address", address_path(address), method: :delete %>
+  <% end %>
   </section>
 <% end %>
