--- a/app/views/cart/show.html.erb
+++ b/app/views/cart/show.html.erb
@@ -19,13 +19,13 @@
   <section id='checkout'>
     <% if current_user %>
       <p>Choose Shipping Address</p>
-      <%= form_tag '/orders' do %>
+      <%= form_for @order do |f| %>
         <% current_user.addresses.each do |address| %>
-          <%= label_tag :address_id, address.nickname.capitalize %>
-          <%= radio_button_tag :address_id, address.id %>
+          <%= f.label :address_id, address.nickname %>
+          <%= f.radio_button :address_id, address.id %>
         <% end %>
+        <%= f.submit 'Check Out' %>
       <% end %>
-      <%= button_to 'Check Out', '/orders' %>
     <% else %>
       <p>You must <%= link_to 'register', registration_path %> or <%= link_to 'log in', login_path %> to checkout.</p>
     <% end %>
