Add order shipping address updating fully

--- a/app/views/user/orders/edit.html.erb
+++ b/app/views/user/orders/edit.html.erb
@@ -1,11 +1,9 @@
 <h3>Please choose the new shipping address!</h3>
 
-<% current_user.addresses.each do |address| %>
-  <section id="address-<%= address.id %>">
-    <%= address.street %>
-    <%= address.city %>
-    <%= address.state %>
-    <%= address.zip %>
-    <%= address.nickname %>
-    <%= button_to "Choose #{address.nickname}!", update_profile_orders_path(@order.address_id), method: :patch %>
+<%= form_tag profile_orders_path, method: :patch do %>
+  <%= hidden_field_tag :address_id, @order.address_id %>
+  <%= hidden_field_tag :id, @order.id %>
+  <%= label_tag :nickname %>
+  <%= select_tag :nickname, options_for_select(["home", "office", "school"]) %>
+  <%= submit_tag "Save" %>
 <% end %>
