--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,30 +4,41 @@
     <title>MonsterShop</title>
     <%= csrf_meta_tags %>
 
+    <%= stylesheet_link_tag "https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"%>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
 
+  <style>
+    body {
+      background-color: lightsteelblue;
+      margin-top: 50px;
+    }
+  </style>
+
   <body>
-    <nav>
-      <%= link_to 'Home', root_path %>
-      <%= link_to 'Register', registration_path unless current_user %>
-      <%= link_to 'Log In', login_path unless current_user %>
-      <% if current_user %>
-        <%= link_to 'Log Out', logout_path %>
-        <%= link_to 'Profile', profile_path %>
-        <p>Logged in as <%= current_user.name %></p>
-        <% if current_merchant_user? %>
-          <%= link_to 'Merchant Dashboard', merchant_dashboard_path %>
-        <% elsif current_admin? %>
-          <%= link_to 'Admin Dashboard', admin_dashboard_path %>
-          <%= link_to 'Users', '/admin/users' %>
-        <% end %>
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand">
+    <%= link_to 'Home', root_path %>
+    <%= link_to 'Register', registration_path unless current_user %>
+    <%= link_to 'Log In', login_path unless current_user %>
+    <% if current_user %>
+      <%= link_to 'Log Out', logout_path %>
+      <%= link_to 'Profile', profile_path %>
+      <p>Logged in as <%= current_user.name %></p>
+      <% if current_merchant_user? %>
+        <%= link_to 'Merchant Dashboard', merchant_dashboard_path %>
+      <% elsif current_admin? %>
+        <%= link_to 'Admin Dashboard', admin_dashboard_path %>
+        <%= link_to 'Users', '/admin/users' %>
       <% end %>
-      <%= link_to 'Merchants', '/merchants' %>
-      <%= link_to 'Items', '/items' %>
-      <%= link_to "Cart: #{cart.count}", cart_path unless current_user && current_admin?%>
-    </nav>
+    <% end %>
+    <%= link_to 'Merchants', '/merchants' %>
+    <%= link_to 'Items', '/items' %>
+    <%= link_to "Cart: #{cart.count}", cart_path unless current_user && current_admin?%>
+  </a>
+</nav>
+
     <% flash.each do |type, message| %>
     <p><%= message %></p>
     <% end %>
