Delete addtional migration to avoid future errors

--- a/app/views/addresses/edit.html.erb
+++ b/app/views/addresses/edit.html.erb
@@ -14,7 +14,7 @@
   <%= number_field_tag :zip, params[:zip] %>
 
   <%= label_tag :nickname %>
-  <%= text_field_tag :nickname, params[:nickname] %>
+  <%= select_tag :nickname, options_for_select(["home", "office", "school"]) %>
 
   <%= submit_tag "Save Changes" %>
 
